style.css
*{
margin:0;
padding:0;
box-sizing:border-box;
}

body{
background:#f4f7fb;
font-family:Arial;
padding:30px;
transition:.3s;
}

.dark{
background:#121212;
color:white;
}

.container{
max-width:760px;
margin:auto;
background:white;
padding:30px;
border-radius:24px;
}

.dark .container{
background:#1f1f1f;
}

.mode{
float:right;
}

.header{
text-align:center;
}

.logo{
width:60px;
}

.quick{
display:grid;
grid-template-columns:1fr 1fr;
gap:12px;
margin-top:20px;
}

.card{
background:#ececec;
padding:20px;
border-radius:18px;
cursor:pointer;
text-align:center;
}

.dark .card{
background:#333;
}

.input-area{
display:flex;
gap:10px;
margin-top:20px;
}

#msg{
flex:1;
padding:16px;
border-radius:12px;
}

button{
padding:16px;
border:none;
border-radius:12px;
cursor:pointer;
}

.send{
background:#2563eb;
color:white;
}

.clear{
background:#ef4444;
color:white;
}

#chat{
margin-top:20px;
display:flex;
flex-direction:column;
gap:14px;
height:450px;
overflow:auto;
}

.user{
align-self:flex-end;
background:#2563eb;
color:white;
padding:14px;
border-radius:18px;
}

.bot{
display:flex;
gap:12px;
background:#ececec;
padding:14px;
border-radius:18px;
max-width:80%;
color:black;
}

.avatar{
width:42px;
height:42px;
border-radius:50%;
}

.typing{
display:flex;
gap:5px;
}

.dot{
width:10px;
height:10px;
background:#777;
border-radius:50%;
animation:typing 1s infinite;
}

.dot:nth-child(2){
animation-delay:.2s;
}

.dot:nth-child(3){
animation-delay:.4s;
}

@keyframes typing{

0%{
transform:translateY(0);
}

50%{
transform:translateY(-5px);
}

100%{
transform:translateY(0);
}

}

.stats{
margin-top:20px;
padding:16px;
background:#ececec;
border-radius:16px;
}

.dark .stats{
background:#333;
}

.footer{
margin-top:20px;
text-align:center;
}

.time{
font-size:11px;
opacity:.5;
margin-top:6px;
}

